# docvault

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
phases/phase-1/: PHASE.md
phases/phase-2/: PHASE.md
phases/phase-3/: PHASE.md
phases/phase-4/: PHASE.md
phases/phase-5/: PHASE.md
src/docvault/: __init__.py  main.py
src/docvault/api/: __init__.py  auth.py  bookings.py  documents.py
src/docvault/auth/: __init__.py  dependencies.py  passwords.py  tokens.py
src/docvault/db/: __init__.py  booking_repository.py  connection.py  document_repository.py  models.py  schema.sql  user_repository.py
src/docvault/memory/: __init__.py  store.py
src/docvault/schemas/: requests.py
src/docvault/workers/: __init__.py  cache.py  indexing.py
tests/phase_1/: test_booking_integration.py  test_booking_unit_contracts.py
tests/phase_2/: test_documents_integration.py  test_security_unit_contracts.py
tests/phase_3/: test_async_and_cache_integration.py  test_async_cache_unit_contracts.py
tests/phase_4/: test_search_integration.py  test_search_unit_contracts.py
tests/phase_5/: eval_memory_recall.py  test_memory_integration.py  test_memory_unit_contracts.py
