[project]
name = "docvault"
version = "0.1.0"
description = "DocVault learning scaffold: one accumulating multi-phase codebase"
requires-python = ">=3.13"
dependencies = [
  "bcrypt>=4.2.0",
  "fastapi[standard]>=0.115.0",
  "httpx>=0.27.0",
  "psycopg[binary]>=3.2.0",
  "pyjwt>=2.9.0",
  "python-dotenv>=1.0.1",
  "redis>=5.0.0",
]

[dependency-groups]
dev = [
  "hypothesis>=6.112.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "integration: black-box or cross-component tests that define the phase spec",
  "unit_contract: comment-only learner unit-test contracts",
]
